--- a/src/assets/style/public.less
+++ b/src/assets/style/public.less
@@ -202,22 +202,22 @@ html,body,#root,.main{
     border-radius:30/@rem;
 }
 .radius-round-xs{
-    border-radius:10/@rem 10/@rem 10/@rem 10/@rem / 50% 50% 50% 50%;
+    border-radius:10/@rem 10/@rem 10/@rem 10/@rem ~'/ 50% 50% 50% 50%';
 }
 .radius-round-sm{
-    border-radius:20/@rem 20/@rem 20/@rem 20/@rem / 50% 50% 50% 50%;
+    border-radius:20/@rem 20/@rem 20/@rem 20/@rem ~'/ 50% 50% 50% 50%';
 }
 .radius-round-df{
-    border-radius:30/@rem 30/@rem 30/@rem 30/@rem / 50% 50% 50% 50%;
+    border-radius:30/@rem 30/@rem 30/@rem 30/@rem ~'/ 50% 50% 50% 50%';
 }
 .radius-round-lg{
-    border-radius:40/@rem 40/@rem 40/@rem 40/@rem / 50% 50% 50% 50%;
+    border-radius:40/@rem 40/@rem 40/@rem 40/@rem ~'/ 50% 50% 50% 50%';
 }
 .radius-round-xl{
-    border-radius:50/@rem 50/@rem 50/@rem 50/@rem / 50% 50% 50% 50%;
+    border-radius:50/@rem 50/@rem 50/@rem 50/@rem ~'/ 50% 50% 50% 50%';
 }
 .radius-round-max{
-    border-radius:60/@rem 60/@rem 60/@rem 60/@rem / 50% 50% 50% 50%;
+    border-radius:60/@rem 60/@rem 60/@rem 60/@rem ~'/ 50% 50% 50% 50%';
 }
 
 .radius-l{
@@ -332,6 +332,9 @@ html,body,#root,.main{
 .text-yellow {
     color: #F4EA2A;
 }
+.text-darkYellow{
+    color:#BFA46B;
+}
 .text-olive {
     color: #8dc63f;
 }
@@ -358,6 +361,9 @@ html,body,#root,.main{
 }
 .text-black {
     color: #474747;
+}
+.text-darkbrown{
+    color:#3B4252;
 }
 .text-grey {
     color: #8799a3;
@@ -424,6 +430,9 @@ html,body,#root,.main{
 .bg-yellow {
     background-color: #F4EA2A;
 }
+.bg-darkYellow{
+    background-color:#EAC87F;
+}
 .bg-olive {
     background-color: #8dc63f;
 }
@@ -479,7 +488,7 @@ html,body,#root,.main{
     background-color:#29344E;
 }
 .bg-darkbrown{
-    background-color:#29292D;
+    background-color:#3B4252;
 }
 .bg-redLight {
     background-color: #fadbd9;
