技术升级 支付页面

--- a/src/assets/style/public.css
+++ b/src/assets/style/public.css
@@ -234,6 +234,9 @@ body,
 .radius-lrt {
   border-radius: 0.29866667rem 0.29866667rem 0 0;
 }
+.radius-lrb {
+  border-radius: 0 0 0.29866667rem 0.29866667rem;
+}
 .radius-br {
   border-radius: 0 0 0.29866667rem 0;
 }
