--- a/src/assets/style/public.less
+++ b/src/assets/style/public.less
@@ -234,6 +234,9 @@ html,body,#root,.main{
 .radius-lrt{
     border-radius:14/@rem 14/@rem 0 0;
 }
+.radius-lrb{
+    border-radius: 0 0 14/@rem 14/@rem;
+}
 .radius-br{
     border-radius:0 0 14/@rem 0;
 }
