--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -9,3 +9,10 @@
   background: url('../../assets/images/skill_bg.png') no-repeat;
   background-size:cover;
 }
+
+.UpgradePayment{
+  width:100%;
+  height:520/@rem;
+  background: url('../../assets/images/skill_bg2.png') no-repeat;
+  background-size:cover;
+}
