IOS 滑屏到底部 回弹调整

--- a/src/assets/style/public.less
+++ b/src/assets/style/public.less
@@ -4,12 +4,15 @@ body,div,h1,h2,h3,h4,h5,p,ul,ol,p{
     font-family:"Helvetica";
     -webkit-text-size-adjust:100%;
     outline:none;
+    touch-action: none;
+    color: #474747;
 }
 
 li{
     padding:0;
     margin:0;
     list-style:none;
+    color: #474747;
 }
 
 h1,h2,h3,h4,h5{
