--- a/src/assets/style/public.css
+++ b/src/assets/style/public.css
@@ -14,11 +14,14 @@ p {
   font-family: "Helvetica";
   -webkit-text-size-adjust: 100%;
   outline: none;
+  touch-action: none;
+  color: #474747;
 }
 li {
   padding: 0;
   margin: 0;
   list-style: none;
+  color: #474747;
 }
 h1,
 h2,
