视频直播回放

--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -16,3 +16,14 @@
   background: url('../../assets/images/skill_bg2.png') no-repeat;
   background-size:cover;
 }
+
+.fade-fadeInLeft-init{
+  transition:0.3s ease-in;
+  transform: translateY(-100%);
+}
+.fade-fadeInLeft-entered{
+  transform: translateY(0);
+}
+.fade-fadeInLeft-exited{
+  transform: translateY(-100%);
+}
