--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -299,11 +299,14 @@
 .margin-left-sm{
     margin-left:20/@rem;
 }
-.margin-left-lg{
+.margin-left-df{
     margin-left:40/@rem;
 }
-.margin-left-xl{
+.margin-left-lg{
     margin-left:50/@rem;
+}
+.margin-left-xl{
+    margin-left:60/@rem;
 }
 
 .margin-right{
