--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -19,11 +19,11 @@
 
 .fade-fadeInLeft-init{
   transition:0.3s ease-in;
-  transform: translateY(-100%);
+  transform: translateX(-150%);
 }
 .fade-fadeInLeft-entered{
-  transform: translateY(0);
+  transform: translateX(0);
 }
 .fade-fadeInLeft-exited{
-  transform: translateY(-100%);
+  transform: translateX(-150%);
 }
