直播视频回放调整

--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -27,3 +27,55 @@
 .fade-fadeInLeft-exited{
   transform: translateX(-150%);
 }
+
+.dplayer-controller{
+  height:30/@rem !important;
+  bottom:23/@rem !important;
+  .dplayer-bar-wrap{
+    height:10/@rem !important;
+    .dplayer-bar,.dplayer-played{
+      height:100% !important;
+    }
+  }
+  .dplayer-icons{
+    .dplayer-live-badge,.dplayer-time{
+      font-size:28/@rem !important;
+    }
+    .dplayer-icon{
+      padding:0 !important;
+      width:60/@rem !important;
+    }
+    .dplayer-setting{
+      .dplayer-setting-box{
+        width:200/@rem !important;
+        bottom:50/@rem !important;
+        padding:8/@rem 0 !important;
+      }
+      .dplayer-setting-item{
+        height:60/@rem !important;
+      }
+    }
+    .dplayer-setting-box-narrow{
+      height:auto !important;
+    }
+    .dplayer-setting-speed-item{
+      height:40/@rem !important;
+      padding:10/@rem !important;
+    }
+    .dplayer-label{
+      font-size:28/@rem !important;
+    }
+    .dplayer-toggle{
+      height:50/@rem !important;
+    }
+    .dplayer-label{
+      vertical-align: top !important;
+    }
+  }
+}
+.dplayer-video-wrap{
+  video{
+    object-fit: cover !important;
+  }
+}
+
